--- a/Singularity.cbp
+++ b/Singularity.cbp
@@ -5,7 +5,7 @@
 		<Option title="Singularity" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="Utilities\;Utilities\Screens\;SecondGameStuff\;SecondGameStuff\Bases\;FirstGameStuff\Items\;FirstGameStuff\map\;FirstGameStuff\;Depreciated\;_Main\;FirstGameStuff\Items\InventorySorter\;" />
+		<Option virtualFolders="Utilities\;Utilities\Screens\;SecondGameStuff\;SecondGameStuff\Bases\;FirstGameStuff\Items\;FirstGameStuff\map\;FirstGameStuff\;Depreciated\;_Main\;FirstGameStuff\Items\InventorySorter\;FirstGameStuff\DamageStuff\;" />
 		<Build>
 			<Target title="default">
 				<Option output="Singularity" prefix_auto="1" extension_auto="1" />
@@ -22,6 +22,7 @@
 		<Unit filename="Bases.h">
 			<Option virtualFolder="SecondGameStuff/Bases/" />
 		</Unit>
+		<Unit filename="DamageTypes.h" />
 		<Unit filename="Depreciated.inl">
 			<Option virtualFolder="Depreciated/" />
 		</Unit>
