--- a/Singularity.cbp
+++ b/Singularity.cbp
@@ -5,7 +5,7 @@
 		<Option title="Singularity" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="Utilities\;Utilities\Screens\;SecondGameStuff\;SecondGameStuff\Bases\;FirstGameStuff\Items\;FirstGameStuff\map\;FirstGameStuff\;Depreciated\;_Main\;FirstGameStuff\Items\InventorySorter\;FirstGameStuff\DamageStuff\;" />
+		<Option virtualFolders="Utilities\;Utilities\Screens\;SecondGameStuff\;SecondGameStuff\Bases\;FirstGameStuff\Items\;FirstGameStuff\map\;FirstGameStuff\;Depreciated\;_Main\;FirstGameStuff\Items\InventorySorter\;FirstGameStuff\DamageStuff\;FirstGameStuff\Player\;" />
 		<Build>
 			<Target title="default">
 				<Option output="Singularity" prefix_auto="1" extension_auto="1" />
@@ -22,7 +22,15 @@
 		<Unit filename="Bases.h">
 			<Option virtualFolder="SecondGameStuff/Bases/" />
 		</Unit>
-		<Unit filename="DamageTypes.h" />
+		<Unit filename="DamageCalculator.cpp">
+			<Option virtualFolder="FirstGameStuff/DamageStuff/" />
+		</Unit>
+		<Unit filename="DamageCalculator.h">
+			<Option virtualFolder="FirstGameStuff/DamageStuff/" />
+		</Unit>
+		<Unit filename="DamageTypes.h">
+			<Option virtualFolder="FirstGameStuff/DamageStuff/" />
+		</Unit>
 		<Unit filename="Depreciated.inl">
 			<Option virtualFolder="Depreciated/" />
 		</Unit>
@@ -75,7 +83,7 @@
 			<Option virtualFolder="FirstGameStuff/" />
 		</Unit>
 		<Unit filename="Player.h">
-			<Option virtualFolder="FirstGameStuff/" />
+			<Option virtualFolder="FirstGameStuff/Player/" />
 		</Unit>
 		<Unit filename="ScreenController.cpp">
 			<Option virtualFolder="Utilities/Screens/" />
