--- a/Singularity.cbp
+++ b/Singularity.cbp
@@ -16,6 +16,7 @@
 		<Linker>
 			<Add library="gdi32" />
 		</Linker>
+		<Unit filename="AttackReader.cpp" />
 		<Unit filename="AttackReader.h">
 			<Option virtualFolder="FirstGameStuff/GameObjects/DamageStuff/" />
 		</Unit>
