--- a/Singularity.cbp
+++ b/Singularity.cbp
@@ -118,7 +118,9 @@
 		<Unit filename="TakeGameMain.h">
 			<Option virtualFolder="FirstGameStuff/" />
 		</Unit>
-		<Unit filename="eventLog.h" />
+		<Unit filename="eventLog.h">
+			<Option virtualFolder="Utilities/" />
+		</Unit>
 		<Unit filename="inventorySorter.cpp">
 			<Option virtualFolder="FirstGameStuff/GameObjects/Items/InventorySorter/" />
 		</Unit>
