--- a/Singularity.cbp
+++ b/Singularity.cbp
@@ -5,7 +5,7 @@
 		<Option title="Singularity" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="Utilities\;Utilities\Screens\;SecondGameStuff\;SecondGameStuff\Bases\;FirstGameStuff\map\;FirstGameStuff\;Depreciated\;_Main\;FirstGameStuff\GameObjects\;FirstGameStuff\GameObjects\Player\;FirstGameStuff\GameObjects\Items\;FirstGameStuff\GameObjects\DamageStuff\;FirstGameStuff\GameObjects\Items\InventorySorter\;" />
+		<Option virtualFolders="Utilities\;Utilities\Screens\;SecondGameStuff\;SecondGameStuff\Bases\;FirstGameStuff\map\;FirstGameStuff\;Depreciated\;_Main\;FirstGameStuff\GameObjects\;FirstGameStuff\GameObjects\Player\;FirstGameStuff\GameObjects\Items\;FirstGameStuff\GameObjects\DamageStuff\;FirstGameStuff\GameObjects\Items\InventorySorter\;FirstGameStuff\GameObjects\ByTheStats\;" />
 		<Build>
 			<Target title="default">
 				<Option output="Singularity" prefix_auto="1" extension_auto="1" />
